[package]
name = "pkm-rs"
version = "0.1.0"
authors = ["zaksabeast <19464008+zaksabeast@users.noreply.github.com>"]
edition = "2018"

[dependencies]
safe-transmute = { version = "0.11", default-features = false }
num_enum = { version = "0.5", default-features = false }
no_std_io = { git = "https://github.com/zaksabeast/no_std_io.git", rev = "4bc5adf" }
